--- a/frontend/src/css/CreatePost.css
+++ b/frontend/src/css/CreatePost.css
@@ -83,8 +83,9 @@
 .post-title-input {
   width: 100%;
   padding: 1rem;
-  border-radius: 8px;
-  border: 1px solid #e4c196;
+  border-radius: 40px;
+  border: 3px solid #e4c196;
+  background-color: white;
   font-size: 1rem;
   margin-bottom: 1rem;
 }
@@ -100,8 +101,9 @@
   width: 100%;
   height: 100%;
   padding: 1rem;
-  border-radius: 8px;
-  border: 1px solid #e4c196;
+  border-radius: 40px;
+  border: 3px solid #e4c196;
+  background-color: white;
   font-size: 1rem;
   line-height: 1.5;
   resize: none;
@@ -124,6 +126,17 @@
   cursor: pointer;
   font-size: 1.2rem;
   color: #666;
+  padding: 0px;
+}
+
+.media-button-2 {
+  padding:0px;
+  padding-right: 20px;
+  background: none;
+  border: none;
+  cursor: pointer;
+  font-size: 1.2rem;
+  color: #666;
 }
 
 /* Selected Tags Section */
@@ -136,8 +149,8 @@
   flex-wrap: wrap;
   gap: 0.5rem;
   padding: 1rem;
-  border: 1px solid #e4c196;
-  border-radius: 8px;
+  border: 3px solid #e4c196;
+  border-radius: 40px;
   max-height: 60px; /* Fixed height */
   overflow-y: auto; /* Enable vertical scrolling */
   min-height: 40px; /* Minimum height when empty */
@@ -196,7 +209,7 @@
   color: #000;
   font-weight: bold;
   padding: 0.75rem 1.5rem;
-  border-radius: 20px;
+  border-radius: 40px;
   border: none;
   cursor: pointer;
   font-size: 1rem;
