minor css changes

--- a/frontend/src/css/Home.css
+++ b/frontend/src/css/Home.css
@@ -113,7 +113,7 @@ body {
 
 /* Create post button */
 .create-post-btn {
-  background-color: #e3b27c;
+  background-color: #f4b471;
   color: white;
   border: none;
   border-radius: 40px;
@@ -151,6 +151,7 @@ body {
   overflow-y: auto;
   height: 100%;
   width: 100%; /* Take full width of main-content */
+  min-width: 50vw;
   background-color: #f5ead9;
   transition: width 0.3s ease;
 }
@@ -194,7 +195,7 @@ body {
   align-items: center;
   justify-content: center;
   color: #333;
-  background-color: #f5ead9;
+  background-color: #fbd6a0;
   border: 2px solid #e0d6c2;
 }
 
@@ -261,7 +262,7 @@ body {
 }
 
 .action-button:hover {
-  color: #e3b27c;
+  color: #fbd6a0;
   transform: scale(1.1);
 }
 
@@ -294,7 +295,7 @@ body {
   position: fixed;
   top: 70px;
   right: 0;
-  width: 380px;
+  width: 20vw;
   height: calc(100vh - 70px);
   background-color: white;
   border-left: 1px solid #e0d6c2;
@@ -481,4 +482,3 @@ body {
     width: auto;
   }
 }
-
