--- a/frontend/src/css/AppointmentsSelect.css
+++ b/frontend/src/css/AppointmentsSelect.css
@@ -29,14 +29,14 @@ body {
 }
 
 /* ===== NAVBAR STYLES ===== */
-.navbar {
+/* .navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
   background-color: var(--primary-light);
   padding: 1rem 2rem;
   box-shadow: 0 2px 4px var(--shadow-color);
-}
+} */
 
 .logo {
   display: flex;
