--- a/frontend/src/css/AppointmentsHome.css
+++ b/frontend/src/css/AppointmentsHome.css
@@ -6,7 +6,7 @@
   text-align: left;
   margin: 2rem 0 2rem 0;
   padding-left: 80px;
-  color: #2c3e50;
+  color:  #d86d45;
   font-size: 2rem;
   font-weight: 700;
   letter-spacing: -0.5px;
@@ -25,7 +25,7 @@
 }
 
 .appointments-container {
-  width: 100%;
+  width: 70rem;
   max-width: 1800px;
   margin: 80px auto 0;
   padding: 20px;
